# middleware/validate.js
@@ -23,6 +23,25 @@ const saveGod = (req, res, next) => {
   });
 };
 
+const saveUser = (req, res, next) => {
+  const validationRule = {
+    username: "required|string",
+    url: "required|string"
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation failed",
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveGod
+  saveGod,
+  saveUser
 };
